Change color of annotation window

When the color of the annotation window is chosen
in the properties dialog and apply is clicked, the
color of the window changes immediately.
Fixed by making ev_annotation_set_rgba send both
"color" and "rgba" signals.

https://bugzilla.gnome.org/show_bug.cgi?id=725571